crates/fv-requirements-txt/src/snapshots/uv_requirements_txt__test__line-endings-include-b.txt.snap
---
source: crates/fv-requirements-txt/src/lib.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Named(
                Requirement {
                    name: PackageName(
                        "tomli",
                    ),
                    extras: [],
                    version_or_url: None,
                    marker: true,
                    origin: Some(
                        File(
                            "<REQUIREMENTS_DIR>/include-b.txt",
                        ),
                    ),
                },
            ),
            hashes: [],
        },
    ],
    constraints: [],
    editables: [],
    index_url: None,
    extra_index_urls: [],
    find_links: [],
    no_index: false,
    no_binary: None,
    only_binary: None,
}
